--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,7 @@ project_name: cryptocandles
 release:
   github:
     owner: marianogappa
-    name: cryptocandles
+    name: crypto-candles
 brew:
   install: bin.install "cryptocandles"
 builds:
@@ -11,7 +11,6 @@ builds:
   - darwin
   goarch:
   - amd64
-  - "386"
   goarm:
   - "6"
   main: .
